 + hd44780 driver: new ConnectionType mplay
 + hd44780 driver: get/set contrast & brightness support for lcd2usb (M. Dolze)
 + hd44780 driver: reporting in ConnectionType functions (Thomas Jarosch)
 * clean up build system (T. Jarosch, with tests/fixes by M. Dolze)
 + hd44780 driver: new ConnectionType ftdi (Thomas Jarosch)
 * shuttleVFD driver: fix VendorID, support newer models (Miska Sulander)
 + i2500vfd driver for a graphocal Noritake VFD (Thomas Jarosch)
 * hd44780 driver: more complete initialization (idea by Pierre Ossman)
 * hd44780 driver: "euro" character mapping table (Markus Dolze)
 * CwLnx driver: support for CW12832
 + new driver mx5000 for Logitech MX5000 keyboards (Christian Jodar)
 * update debian init scripts to allow multiple instances of clients
 + serialVFD driver: support for 4 more display types (Stefan Herdler)
 * IOWarrior driver: fixed 4-line display use
 + IOWarrior driver: add ExtendedMode option
 * lcdproc: unbreak compilation on OS X 1.5 and higher (Topher Fangio)
 * server: fix interpretation of numeric priorities (Andrew M. Bishop)
 + hd44780 driver: new ConnectionType ethlcd (Mariusz Bialonczyk)
 + picolcd driver: support to send IR commands to LIRC (Jack Cleaver)
 + picolcd driver: support for 20x4 picoLCDs (Nicu Pavel)
 + hd44780 driver: new ConnectionType uss720 (Eric Pooch)
 * new make targets to compile & install server & clients separately
 * autoconf fixes: check for pkg-config macros
 + new driver irtrans (Phant0m / Aron Parsons)
 + serialVFD driver: support Siemens/Wincor Nixdorf BA63/66 (Stefan Herdler)
 + new client lcdident.pl (Ethan Dicks)
 * server: prevent stalling if time goes backwards (M. Vallevand)
 * hd44780 driver: update the backlight setting only on change

v.0.5.2
 * fix switching on/off the Load screen in lcdproc client using the menu
 * refactor adv_bignum: support height > 4, loadable chars with offset
 * ged rid of global variables buffer & tmp in lcdproc client