@@ -471,6 +471,10 @@ Size=20x4
 # set this flag to get into extended mode (4-line linear).
 #ExtendedMode=yes
 
+# In extended mode, on some controllers like the ST7036 (in 3 line mode)
+# the next line in DDRAM won't start 0x20 higher. [default: 0x20]
+#LineAddress=0x10
+
 # Character map to to map ISO-8859-1 to the LCD's character set
 # [default: hd44780_default; legal: hd44780_default, hd44780_euro, 
 #  ea_ks0073, sed1278f_0b ]
